--- a/less/style_base.less
+++ b/less/style_base.less
@@ -146,7 +146,7 @@ blockquote {
 
 /* Placeholder Styles */
 ::-webkit-input-placeholder {color: @placeholder-color;}
-:-moz-placeholder {color: @placeholder-color;}
+input:-moz-placeholder {color: @placeholder-color;}
 
 
 /* Text Select */
