--- a/css/style_complete.css
+++ b/css/style_complete.css
@@ -675,7 +675,7 @@ blockquote cite:before {
 ::-webkit-input-placeholder {
   color: #898989;
 }
-:-moz-placeholder {
+input:-moz-placeholder {
   color: #898989;
 }
 /* Text Select */
