--- a/less/style_tabs.less
+++ b/less/style_tabs.less
@@ -8,23 +8,30 @@ ul.tabs-nav {
     margin: 5px 0 20px;
     li {
 	    float: left;
-	    color: @tab-color;
-	    font-family: @tab-font;
-	    font-size: @tab-font-size;
-	    font-weight: @tab-font-weight;
-	    line-height: 1.9;
 	    padding: 6px 25px;
 	    border: 1px solid @light-gray;
 	    background: @tab-bg;
 	    margin: 0 -1px -1px 0;
 	    .transition;
-	    &:hover {cursor: pointer; color: @tab-color-hover;}
+	    &:hover {
+	    	cursor: pointer;
+	    	a {color: @tab-color-hover;}
+	    }
+		a {
+		    display: block;
+		    color: @tab-color;
+		    font-family: @tab-font;
+	    	font-size: @tab-font-size;
+	    	font-weight: @tab-font-weight;
+	    	line-height: 1.9;
+	    	&:hover {color: @tab-color-hover;}
+	    }
 	    &.active {
 		    padding-top: 9px;
 		    border-bottom: 1px solid #fff;
 		    margin-top: -3px;
-		    color: @tab-color-active;
 		    background: @tab-frame-bg;
+		    a {color: @tab-color-active;}
 		}
     }
 }
