--- a/less/ferret/style_buttons.less
+++ b/less/ferret/style_buttons.less
@@ -3,7 +3,6 @@
 /* Buttons */
 .button, a.button {
 	float: left;
-	height: @button-height;
 	padding: 0 @button-height - 10;
 	color: @button-color;
 	font-family: @button-font;
@@ -30,15 +29,14 @@
 	
 	
 	// Sizes
-	&.small {height: @button-height - 10; font-size: @button-font-size - 2; line-height: @button-height - 10; padding: 0 @button-height / 2;}
-	&.large {height: @button-height + 10; font-size: @button-font-size + 2; line-height: @button-height + 10; padding: 0 @button-height;}
-	&.x-large {height: @button-height + 20; font-size: @button-font-size + 4; line-height: @button-height + 20; padding: 0 @button-height + 10;}
+	&.small {font-size: @button-font-size - 2; line-height: @button-height - 10; padding: 0 @button-height / 2;}
+	&.large {font-size: @button-font-size + 2; line-height: @button-height + 10; padding: 0 @button-height;}
+	&.x-large {font-size: @button-font-size + 4; line-height: @button-height + 20; padding: 0 @button-height + 10;}
 	&.full-width {width: 100%; padding-left: 0; padding-right: 0; text-align: center;}
 	
 	
 	// Submit Button
 	&.submit {
-		height: @button-height + 5;
 		font-family: @button-font;
 		letter-spacing: @base-letter-spacing;
 		border: 0;
