--- a/less/ferret/style_fonts.less
+++ b/less/ferret/style_fonts.less
@@ -34,3 +34,6 @@
     font-weight: normal;
     font-style: normal;
 }
+.font-light {font-family: 'OpenSansLight'; font-weight: normal;}
+.font-normal {font-family: 'OpenSansReg'; font-weight: normal;}
+.font-bold {font-family: 'OpenSansSemi'; font-weight: normal;}
