--- a/css/style_complete.css
+++ b/css/style_complete.css
@@ -1,22 +1,10 @@
 /*********************************************
-Main Stylesheet - Site Name
-Last Updated: 11/07/12
+Ferret Main Stylesheet
+Last Updated: 11/11/12
 Written by: Sean Stopnik
 Email: sstopnik@redventures.com
 *********************************************/
-.font-light {
-  font-family: 'OpenSansLight';
-  font-weight: normal;
-}
-.font-normal {
-  font-family: 'OpenSansReg';
-  font-weight: normal;
-}
-.font-bold {
-  font-family: 'OpenSansSemi';
-  font-weight: normal;
-}
-/* Grid Reset */
+/* Box Grid */
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -25,7 +13,6 @@ Email: sstopnik@redventures.com
 * html .row {
   height: 1%;
 }
-/* Rows */
 .row {
   display: block;
   width: 100%;
@@ -68,7 +55,6 @@ Email: sstopnik@redventures.com
 .row:after {
   clear: both;
 }
-/* Box Widths */
 .box-1 {
   width: 6.25%;
 }
@@ -148,31 +134,26 @@ Email: sstopnik@redventures.com
   float: left;
   padding: 0 10px;
 }
-/* Clear */
-.clear {
-  clear: both;
-  display: block;
-  overflow: hidden;
-  visibility: hidden;
-  width: 0;
-  height: 0;
-}
-/* Container */
 .container {
   position: relative;
   margin: 0 auto;
 }
 /* Media Queries */
-/* Mobile */
-@media only screen and (max-width: 599px), (max-device-width: 599px) {
+@media (max-width: 767px) {
+  .container {
+    width: 100%;
+  }
+}
+@media (max-width: 959px) {
   * {
     -webkit-text-size-adjust: none;
   }
   .container {
-    width: 100%;
     padding: 0 10px;
     overflow: hidden;
   }
+}
+@media (max-width: 599px) {
   .row {
     margin-bottom: 0 !important;
   }
@@ -200,16 +181,7 @@ Email: sstopnik@redventures.com
     margin-bottom: 20px;
   }
 }
-/* Small Tablet */
-@media only screen and (min-width: 600px) and (max-width: 767px) {
-  * {
-    -webkit-text-size-adjust: none;
-  }
-  .container {
-    width: 100%;
-    padding: 0 10px;
-    overflow: hidden;
-  }
+@media (min-width: 600px) and (max-width: 767px) {
   .box-1,
   .box-2,
   .box-3,
@@ -233,25 +205,17 @@ Email: sstopnik@redventures.com
     width: 50%;
   }
 }
-/* iPad - Large Tablet */
-@media only screen and (min-width: 768px) and (max-width: 959px) {
-  * {
-    -webkit-text-size-adjust: none;
-  }
+@media (min-width: 768px) and (max-width: 959px) {
   .container {
     width: 768px;
-    padding: 0 10px;
-    overflow: hidden;
   }
 }
-/* Normal Screen */
-@media only screen and (min-width: 960px) and (max-width: 1599px) {
+@media (min-width: 960px) and (max-width: 1599px) {
   .container {
     width: 960px;
   }
 }
-/* Large Screen */
-@media only screen and (min-width: 1600px) {
+@media (min-width: 1600px) {
   .container {
     width: 1140px;
   }
@@ -277,6 +241,18 @@ Email: sstopnik@redventures.com
   src: url('../fonts/OpenSans-Semibold-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/OpenSans-Semibold-webfont.woff') format('woff'), url('../fonts/OpenSans-Semibold-webfont.ttf') format('truetype'), url('../fonts/OpenSans-Semibold-webfont.svg#OpenSansSemibold') format('svg');
   font-weight: normal;
   font-style: normal;
+}
+.font-light {
+  font-family: 'OpenSansLight';
+  font-weight: normal;
+}
+.font-normal {
+  font-family: 'OpenSansReg';
+  font-weight: normal;
+}
+.font-bold {
+  font-family: 'OpenSansSemi';
+  font-weight: normal;
 }
 /* Reset */
 html,
@@ -406,7 +382,7 @@ nav,
 section {
   display: block;
 }
-/* Base Defaults */
+/* Defaults */
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -430,6 +406,9 @@ hr {
   margin: 0 10px 40px;
   padding: 0;
 }
+hr.flush {
+  margin: 0;
+}
 input,
 select {
   vertical-align: middle;
@@ -441,15 +420,6 @@ button {
   border: 0;
   margin: 0;
 }
-.left {
-  float: left;
-}
-.right {
-  float: right;
-}
-.center {
-  text-align: center;
-}
 .bold,
 b,
 strong {
@@ -459,29 +429,20 @@ strong {
 i {
   font-style: italic;
 }
-.normal {
-  font-weight: normal;
+::-webkit-input-placeholder {
+  color: #898989;
 }
-.noselect {
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -o-user-select: none;
-  user-select: none;
+input:-moz-placeholder {
+  color: #898989;
 }
-.flush {
-  margin: 0;
+::selection {
+  background: #464646;
+  color: #fff;
 }
-.hide {
-  display: none;
+::-moz-selection {
+  background: #464646;
+  color: #fff;
 }
-.position {
-  position: relative;
-}
-small {
-  font-size: 73%;
-}
-/* Typography */
 h1,
 h2,
 h3,
@@ -557,54 +518,14 @@ p,
 span {
   letter-spacing: 1px;
 }
-/* Lists */
-ul li {
-  margin-bottom: 10px;
-  font-size: 90%;
-  letter-spacing: 1px;
+small,
+.small {
+  font-size: 73%;
 }
-ul li:last-child {
-  margin-bottom: 0;
+sup {
+  vertical-align: top;
+  font-size: 73%;
 }
-ul.disc {
-  list-style-type: disc;
-  margin-left: 20px;
-}
-ul.square {
-  list-style-type: square;
-  margin-left: 20px;
-}
-ul.checkmark li:before {
-  content: "\2713";
-  color: #fdaa4e;
-  padding-right: 10px;
-}
-ul.plus li:before {
-  content: "\271A";
-  color: #3faab9;
-  padding-right: 10px;
-}
-ul.multiply li:before {
-  content: "\2716";
-  color: #f26a4a;
-  padding-right: 10px;
-}
-ul.with-spacing {
-  margin-bottom: 20px;
-}
-ol li {
-  margin: 0 0 10px 25px;
-  list-style: decimal;
-  font-size: 90%;
-  letter-spacing: 1px;
-}
-ol li:last-child {
-  margin-bottom: 0;
-}
-nav li {
-  margin-bottom: 0;
-}
-/* Blockquote */
 blockquote {
   border-left: 1px solid #e1e1e1;
   padding: 0 0 0 20px;
@@ -619,34 +540,6 @@ blockquote cite {
 }
 blockquote cite:before {
   content: "\2014 \0020";
-}
-/* Placeholder Styles */
-::-webkit-input-placeholder {
-  color: #898989;
-}
-input:-moz-placeholder {
-  color: #898989;
-}
-/* Text Select */
-::selection {
-  background: #464646;
-  color: #fff;
-}
-::-moz-selection {
-  background: #464646;
-  color: #fff;
-}
-/* Tables */
-table {
-  width: 100%;
-}
-table th,
-table td {
-  text-align: left;
-}
-/* Section */
-section.first {
-  margin-top: 80px;
 }
 .shadow {
   box-shadow: 0 2px 3px rgba(0, 0, 0, 0.3);
@@ -670,6 +563,21 @@ section.first {
   -moz-opacity: 0.6;
   -khtml-opacity: 0.6;
   opacity: 0.6;
+}
+.position {
+  position: relative;
+}
+.left {
+  float: left;
+}
+.right {
+  float: right;
+}
+.center {
+  text-align: center;
+}
+.flush {
+  margin: 0;
 }
 .top10 {
   margin-top: 10px;
@@ -695,9 +603,33 @@ section.first {
 .bottom40 {
   margin-bottom: 40px;
 }
+.clear {
+  clear: both;
+  display: block;
+  overflow: hidden;
+  visibility: hidden;
+  width: 0;
+  height: 0;
+}
+.normal {
+  font-weight: normal;
+}
+.noselect {
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+}
+.hide {
+  display: none;
+}
 .striped {
   background-image: url(../images/bg_stripes.png);
   background-repeat: repeat;
+}
+section.first {
+  margin-top: 80px;
 }
 /* JUST FOR GRID DEMO EXAMPLE - REMOVE FOR DEVELOPMENT */
 section {
@@ -903,7 +835,17 @@ header nav li a:hover {
   z-index: 100;
   display: none;
 }
-@media only screen and (max-width: 959px) {
+@media (max-width: 599px) {
+  header nav ul {
+    width: 100%;
+  }
+}
+@media (min-width: 600px) and (max-width: 959px) {
+  header nav ul {
+    width: 50%;
+  }
+}
+@media (max-width: 959px) {
   .mobile-nav {
     display: block;
   }
@@ -912,7 +854,6 @@ header nav li a:hover {
     height: 60px;
   }
   header nav ul {
-    width: 50%;
     margin-top: 70px;
     display: none;
   }
@@ -952,14 +893,9 @@ header nav li a:hover {
     padding: 14px 20px 0;
   }
 }
-@media only screen and (min-width: 959px) {
+@media (min-width: 960px) {
   header nav ul {
     display: block !important;
-  }
-}
-@media only screen and (max-width: 599px), (max-device-width: 599px) {
-  header nav ul {
-    width: 100%;
   }
 }
 /* Forms */
@@ -994,6 +930,7 @@ header nav li a:hover {
 select.inputfield {
   -webkit-appearance: none;
   -moz-appearance: none;
+  color: #898989;
   background: #ffffff url(../images/bg_select_arrow.png) no-repeat right;
 }
 select.inputfield:focus {
@@ -1002,7 +939,19 @@ select.inputfield:focus {
 textarea.inputfield {
   height: 120px;
 }
-@media only screen and (max-width: 599px), (max-device-width: 599px) {
+.checkbox {
+  float: left;
+  margin: 0 7px 20px 0;
+}
+.checkbox:focus {
+  outline: none;
+}
+label {
+  float: left;
+  font-size: 12px;
+  line-height: 1.2;
+}
+@media (max-width: 599px) {
   .inputfield {
     margin-bottom: 0;
   }
@@ -1123,44 +1072,12 @@ ul.tabs-nav li.active a {
   background: #ffffff;
   display: none;
 }
-/* Media Queries */
-@media only screen and (max-width: 599px), (max-device-width: 599px) {
-  ul.tabs-nav {
-    border: none;
-  }
-  ul.tabs-nav li {
-    border: none;
-    border-right: 1px solid #e1e1e1;
-    padding: 2px 12px;
-    background: none;
-  }
-  ul.tabs-nav li:first-child {
-    padding-left: 0;
-  }
-  ul.tabs-nav li:last-child {
-    padding-right: 0;
-    border: none;
-  }
-  ul.tabs-nav li.active {
-    padding-top: 2px;
-    margin-top: 0;
-    background: none;
-  }
-  .tooltip span {
-    display: none !important;
-  }
+table {
+  width: 100%;
 }
-@media only screen and (min-width: 600px) and (max-width: 767px) {
-  
-}
-@media only screen and (min-width: 768px) and (max-width: 959px) {
-  
-}
-@media only screen and (min-width: 960px) and (max-width: 1599px) {
-  
-}
-@media only screen and (min-width: 1600px) {
-  
+table th,
+table td {
+  text-align: left;
 }
 /* Fancybox */
 #fancybox-loading {
@@ -1347,6 +1264,45 @@ ul.tabs-nav li.active a {
 }
 .fancybox-ie .fancybox-bg {
   background: transparent !important;
+}
+/* Media Queries */
+@media (max-width: 599px) {
+  ul.tabs-nav {
+    border: none;
+  }
+  ul.tabs-nav li {
+    border: none;
+    border-right: 1px solid #e1e1e1;
+    padding: 2px 12px;
+    background: none;
+  }
+  ul.tabs-nav li:first-child {
+    padding-left: 0;
+  }
+  ul.tabs-nav li:last-child {
+    padding-right: 0;
+    border: none;
+  }
+  ul.tabs-nav li.active {
+    padding-top: 2px;
+    margin-top: 0;
+    background: none;
+  }
+  .tooltip span {
+    display: none !important;
+  }
+}
+@media (min-width: 600px) and (max-width: 767px) {
+  
+}
+@media (min-width: 768px) and (max-width: 959px) {
+  
+}
+@media (min-width: 960px) and (max-width: 1599px) {
+  
+}
+@media (min-width: 1600px) {
+  
 }
 /* Rows */
 .ie6 .row.row {
