--- a/less/ferret/style_responsive.less
+++ b/less/ferret/style_responsive.less
@@ -1,33 +1,46 @@
 // Responsive Styles
 
+
 /* Media Queries */
 
+
 // Phone
-@media only screen and (max-width: 599px), (max-device-width: 599px) {
-    ul.tabs-nav {border: none;}
-    ul.tabs-nav li {border: none; border-right: 1px solid @light-gray; padding: 2px 12px; background: none;}
-    ul.tabs-nav li:first-child {padding-left: 0;}
-    ul.tabs-nav li:last-child {padding-right: 0; border: none;}
-    ul.tabs-nav li.active {padding-top: 2px; margin-top: 0; background: none;}
+@media (max-width: 599px) {
+    ul.tabs-nav {
+    	border: none;
+    	li {
+    		border: none;
+    		border-right: 1px solid @light-gray;
+    		padding: 2px 12px;
+    		background: none;
+    		&:first-child {padding-left: 0;}
+    		&:last-child {padding-right: 0; border: none;}
+    		&.active {padding-top: 2px; margin-top: 0; background: none;}
+    	}
+    }
     .tooltip span {display: none !important;}
 }
 
+
 // Small Tablet
-@media only screen and (min-width: 600px) and (max-width: 767px) {
+@media (min-width: 600px) and (max-width: 767px) {
 	
 }
+
 
 // iPad - Large Tablet
-@media only screen and (min-width: 768px) and (max-width: 959px) {
+@media (min-width: 768px) and (max-width: 959px) {
 	
 }
+
 
 // Normal Screen
-@media only screen and (min-width: 960px) and (max-width: 1599px) {
+@media (min-width: 960px) and (max-width: 1599px) {
 	
 }
 
+
 // Large Screen
-@media only screen and (min-width: 1600px) {
+@media (min-width: 1600px) {
 	
 }
