--- a/less/style_complete.less
+++ b/less/style_complete.less
@@ -154,9 +154,10 @@ Email: sstopnik@redventures.com
 @import "ferret/style_buttons.less"; // Button Styles
 @import "ferret/style_nav.less"; // Header Navigation Styles
 @import "ferret/style_forms.less"; // Form Styles
-@import "ferret/style_tooltips.less"; // Tooltip Styles
+@import "ferret/style_lists.less"; // List Styles
 @import "ferret/style_tabs.less"; // Content Tabs Styles
 @import "ferret/style_tables.less"; // Table Styles
+@import "ferret/style_tooltips.less"; // Tooltip Styles
 
 
 // Fancybox
