change to demo css

--- a/less/ferret/style_main.less
+++ b/less/ferret/style_main.less
@@ -1,14 +1,7 @@
 // Main Styles
 
 
-/* JUST FOR GRID DEMO EXAMPLE - REMOVE FOR DEVELOPMENT */
-section {margin: 20px 0;}
-.row {margin-bottom: 20px;}
-span {display: block; -webkit-transition: all .15s ease-in-out; background: #e1e1e1;}
-span:hover {background: #464646; color: #fff;}
-span.headline {background: none; color: #464646;}
-.row .row {background: #acacac;}
-.row form .row {background: none;}
+/* JUST FOR FERRET DEMO - REMOVE BEFORE DEVELOPMENT */
 pre {
 	display: block;
 	width: 100%;
