--- a/css/style_complete.css
+++ b/css/style_complete.css
@@ -631,32 +631,7 @@ blockquote cite:before {
 section.first {
   margin-top: 80px;
 }
-/* JUST FOR GRID DEMO EXAMPLE - REMOVE FOR DEVELOPMENT */
-section {
-  margin: 20px 0;
-}
-.row {
-  margin-bottom: 20px;
-}
-span {
-  display: block;
-  -webkit-transition: all 0.15s ease-in-out;
-  background: #e1e1e1;
-}
-span:hover {
-  background: #464646;
-  color: #fff;
-}
-span.headline {
-  background: none;
-  color: #464646;
-}
-.row .row {
-  background: #acacac;
-}
-.row form .row {
-  background: none;
-}
+/* JUST FOR FERRET DEMO - REMOVE BEFORE DEVELOPMENT */
 pre {
   display: block;
   width: 100%;
