changes to less order

--- a/less/ferret/style_nav.less
+++ b/less/ferret/style_nav.less
@@ -4,7 +4,7 @@
 header {
 	position: fixed;
 	width: 100%;
-	height: 60px;
+	height: @nav-bar-height;
 	top: 0;
 	background: @nav-bar-bg;
 	z-index: 100;
