--- a/less/ferret/style_typography.less
+++ b/less/ferret/style_typography.less
@@ -24,9 +24,10 @@ span.headline {display: block; font-size: 120%; color: @headline-color;}
 
 
 // Standard Links
-a:link, a:visited, a:active, a {
+a {
 	text-decoration: none;
 	color: @link-color;
+	.font-normal;
 	.transition;
 	outline: none;
 	&:hover {color: @link-hover;}
