--- a/css/style_complete.css
+++ b/css/style_complete.css
@@ -1,6 +1,6 @@
 /*********************************************
 Ferret Main Stylesheet
-Last Updated: 11/11/12
+Last Updated: 12/21/12
 Written by: Sean Stopnik
 Email: sstopnik@redventures.com
 *********************************************/
@@ -254,6 +254,10 @@ Email: sstopnik@redventures.com
   font-family: 'OpenSansSemi';
   font-weight: normal;
 }
+.font-headline {
+  font-family: 'OpenSansSemi';
+  font-weight: normal;
+}
 /* Reset */
 html,
 body,
@@ -368,7 +372,7 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
-/* HTML5 Fix */
+/* HTML5 Tags */
 article,
 aside,
 details,
@@ -487,20 +491,16 @@ span.headline {
   font-size: 120%;
   color: #959595;
 }
-a:link,
-a:visited,
-a:active,
 a {
   text-decoration: none;
   color: #3faab9;
+  font-family: 'OpenSansReg';
+  font-weight: normal;
   -webkit-transition: all 0.15s ease-in-out;
   -moz-transition: all 0.15s ease-in-out;
   transition: all 0.15s ease-in-out;
   outline: none;
 }
-a:link:hover,
-a:visited:hover,
-a:active:hover,
 a:hover {
   color: #353535;
 }
@@ -645,10 +645,21 @@ a.button {
   background: #3faab9;
   border-radius: 3px;
   box-shadow: inset 0 1px 3px rgba(255, 255, 255, 0.3);
+  text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.1);
   -webkit-transition: all 0.15s ease-in-out;
   -moz-transition: all 0.15s ease-in-out;
   transition: all 0.15s ease-in-out;
-  text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.1);
+  -webkit-appearance: none;
+}
+.button.submit,
+a.button.submit {
+  height: 40px;
+  font-family: 'OpenSansSemi';
+  letter-spacing: 1px;
+  border: 0;
+  border-top: 1px solid #f26a4a;
+  background-color: #f26a4a;
+  margin: 5px 0 0;
 }
 .button.orange,
 a.button.orange {
@@ -717,15 +728,6 @@ a.button.full-width {
   padding-right: 0;
   text-align: center;
 }
-.button.submit,
-a.button.submit {
-  font-family: 'OpenSansSemi';
-  letter-spacing: 1px;
-  border: 0;
-  border-top: 1px solid #f26a4a;
-  background-color: #f26a4a;
-  margin: 5px 0 0;
-}
 .button:hover,
 a.button:hover {
   background-color: #353535;
@@ -750,7 +752,7 @@ header nav ul {
 }
 header nav ul li {
   float: left;
-  margin: 0 25px;
+  margin: 0 20px;
 }
 header nav ul li:first-child {
   margin-left: 0;
@@ -760,12 +762,11 @@ header nav ul li:last-child {
 }
 header nav ul li a {
   display: block;
-  height: 60px;
-  font-family: 'OpenSansReg';
-  font-size: 15px;
+  font-family: 'OpenSansSemi';
+  font-size: 12px;
   font-weight: normal;
   color: #ffffff !important;
-  padding-top: 14px;
+  line-height: 60px;
 }
 header nav ul li a:hover {
   color: #fdaa4e !important;
@@ -816,14 +817,14 @@ header nav ul li a:hover {
     border-bottom: 7px solid #353535;
   }
   header nav li {
-    float: none;
+    float: none !important;
     display: block;
     height: 60px;
     border-top: 1px solid #3f3f3f;
     border-bottom: 1px solid #2b2b2b;
     padding: 0;
     background: #353535;
-    margin: 0;
+    margin: 0 !important;
   }
   header nav li:first-child {
     border-top: 0;
@@ -837,7 +838,7 @@ header nav ul li a:hover {
     display: block;
     width: 100%;
     font-size: 15px;
-    padding: 14px 20px 0;
+    padding: 0 20px;
   }
 }
 @media (min-width: 960px) {
@@ -934,6 +935,20 @@ ul.multiply li:before {
   color: #f26a4a;
   padding-right: 10px;
 }
+ul.inline li {
+  float: left;
+  line-height: 1.2;
+  border-right: 1px solid #acacac;
+  padding-right: 10px;
+  margin-left: 10px;
+}
+ul.inline li:first-child {
+  margin: 0;
+}
+ul.inline li:last-child {
+  padding: 0;
+  border: 0;
+}
 ul.with-spacing {
   margin-bottom: 20px;
 }
@@ -998,9 +1013,64 @@ ul.tabs-nav li.active a {
 table {
   width: 100%;
 }
+table thead {
+  background: #3faab9;
+}
+table thead th {
+  color: #ffffff;
+  font-family: 'OpenSansSemi';
+  font-weight: normal;
+}
+table thead th:first-child {
+  border-radius: 3px 0 0 0;
+}
+table thead th:last-child {
+  border-radius: 0 3px 0 0;
+}
 table th,
 table td {
   text-align: left;
+  padding: 5px 10px;
+}
+table tbody {
+  font-size: 14px;
+  letter-spacing: 1px;
+}
+table tbody tr {
+  -webkit-transition: all 0.15s ease-in-out;
+  -moz-transition: all 0.15s ease-in-out;
+  transition: all 0.15s ease-in-out;
+}
+table tbody tr:nth-child(even) {
+  background: #f4f4f4;
+}
+table tbody tr:nth-child(even):hover {
+  color: #353535;
+  background: #eaeaea;
+}
+table tbody tr:last-child td:first-child {
+  border-radius: 0 0 0 3px;
+}
+table tbody tr:last-child td:last-child {
+  border-radius: 0 0 3px 0;
+}
+table tfoot {
+  background: #e1e1e1;
+}
+table tfoot td {
+  color: #353535;
+  font-family: 'OpenSansSemi';
+  font-weight: normal;
+  font-size: 14px;
+}
+table tfoot td:first-child {
+  border-radius: 0 0 0 3px;
+}
+table tfoot td:last-child {
+  border-radius: 0 0 3px 0;
+}
+table.with-footer tbody tr:last-child td {
+  border-radius: 0;
 }
 /* Tooltip */
 @-webkit-keyframes toolTip {
