changes to wordpress less and updated modernizr

--- a/resources/wordpress/ferret/less/style_complete.less
+++ b/resources/wordpress/ferret/less/style_complete.less
@@ -1,12 +1,12 @@
 /*********************************************
 Ferret Main Stylesheet
-Last Updated: 11/11/12
+Last Updated: 12/21/12
 Written by: Sean Stopnik
 Email: sstopnik@redventures.com
 *********************************************/
 
 
-// Complete Site Settings
+// Site-wide Settings & Variables
 
 
 // Grid Settings
@@ -33,6 +33,7 @@ Email: sstopnik@redventures.com
 @font-light: 'OpenSansLight';
 @font-normal: 'OpenSansReg';
 @font-bold: 'OpenSansSemi';
+@font-headline: 'OpenSansSemi';
 
 
 // Colors
@@ -73,9 +74,12 @@ Email: sstopnik@redventures.com
 
 
 // Navigation Bar
+@nav-bar-position: fixed;
 @nav-bar-bg: @dark;
-@nav-font: @font-normal;
-@nav-font-size: 15px;
+@nav-bar-height: 60px;
+@nav-spacing: 20px;
+@nav-font: @font-bold;
+@nav-font-size: 12px;
 @nav-font-weight: normal;
 @nav-color: @white;
 @nav-color-hover: @orange;
@@ -88,7 +92,7 @@ Email: sstopnik@redventures.com
 @input-font: @font-normal;
 @input-font-weight: normal;
 @input-color: @dark;
-@input-border: #e1e1e1;
+@input-border: @light-gray;
 @input-bg-hover: #fff;
 @input-border-hover: #acacac;
 @input-bg-focus: lighten(@yellow, 10%);
@@ -113,6 +117,16 @@ Email: sstopnik@redventures.com
 @tab-frame-bg: #fff;
 
 
+// Tables
+@table-header-color: #fff;
+@table-header-bg: @blue;
+@table-row-bg: #f4f4f4;
+@table-font-size: 14px;
+@table-footer-color: @dark;
+@table-footer-bg: @light-gray;
+@table-border: @light-gray;
+
+
 // Tooltips
 @tooltip-bg: @dark;
 @tooltip-color: #fff;
@@ -128,7 +142,7 @@ Email: sstopnik@redventures.com
 
 
 // First Section Top Margin to Compensate for Fixed Top Navigation Bar
-@first-section-margin: 80px;
+@first-section-margin: @nav-bar-height;
 
 
 // Extras
@@ -147,7 +161,6 @@ Email: sstopnik@redventures.com
 @import "ferret/style_base.less";
 @import "ferret/style_typography.less";
 @import "ferret/style_mixins.less";
-@import "ferret/style_main.less";
 
 
 // Extras (Add or Remove as Needed)
@@ -158,6 +171,10 @@ Email: sstopnik@redventures.com
 @import "ferret/style_tabs.less"; // Content Tabs Styles
 @import "ferret/style_tables.less"; // Table Styles
 @import "ferret/style_tooltips.less"; // Tooltip Styles
+
+
+// Main Styles
+@import "ferret/style_main.less"; // This is the Stylesheet for the Project
 
 
 // Fancybox
