--- a/resources/wordpress/ferret/less/ferret/style_fonts.less
+++ b/resources/wordpress/ferret/less/ferret/style_fonts.less
@@ -37,3 +37,4 @@
 .font-light {font-family: 'OpenSansLight'; font-weight: normal;}
 .font-normal {font-family: 'OpenSansReg'; font-weight: normal;}
 .font-bold {font-family: 'OpenSansSemi'; font-weight: normal;}
+.font-headline {font-family: 'OpenSansSemi'; font-weight: normal;}
