--- a/resources/wordpress/ferret/less/ferret/style_lists.less
+++ b/resources/wordpress/ferret/less/ferret/style_lists.less
@@ -13,6 +13,18 @@ ul {
 	&.checkmark li:before {content: "\2713"; color: @list-item-checkbox; padding-right: 10px;}
 	&.plus li:before {content: "\271A"; color: @list-item-plus; padding-right: 10px;}
 	&.multiply li:before {content: "\2716"; color: @list-item-multiply; padding-right: 10px;}
+	&.inline {
+		li {
+			float: left;
+			line-height: 1.2;
+			border-right: 1px solid @gray;
+			padding-right: 10px;
+			margin-left: 10px;
+			&:first-child {margin: 0;}
+			&:last-child {padding: 0; border: 0;}
+		}
+		
+	}
 	&.with-spacing {margin-bottom: 20px;}
 }
 ol {
