edited grid and added 12 and 24 column layout examples

--- a/less/style_complete.less
+++ b/less/style_complete.less
@@ -10,8 +10,9 @@ Email: sstopnik@redventures.com
 
 
 // Grid Settings
-@grid-normal: 960px;
-@grid-wide: 1140px;
+@grid-boxes: 16; // Sets the max number of boxes per row (up to 24)
+@grid-normal: 960px; // Sets Container Width
+@grid-wide: 1140px; // Sets Wide Screen Container Width
 @grid-row-with-spacing: 40px;
 
 
