--- a/css/style_complete.css
+++ b/css/style_complete.css
@@ -59,7 +59,7 @@ Email: sstopnik@redventures.com
   width: 6.25%;
 }
 .box-2 {
-  width: 12.50%;
+  width: 12.5%;
 }
 .box-3 {
   width: 18.75%;
@@ -103,17 +103,44 @@ Email: sstopnik@redventures.com
 .box-16 {
   width: 100%;
 }
-.box-3.sixth {
-  width: 16.66%;
+.box-17 {
+  width: 106.25%;
 }
-.box-4.fifth {
+.box-18 {
+  width: 112.5%;
+}
+.box-19 {
+  width: 118.75%;
+}
+.box-20 {
+  width: 125%;
+}
+.box-21 {
+  width: 131.25%;
+}
+.box-22 {
+  width: 137.5%;
+}
+.box-23 {
+  width: 143.75%;
+}
+.box-24 {
+  width: 150%;
+}
+.box-half {
+  width: 50%;
+}
+.box-3rd {
+  width: 33.333333333333336%;
+}
+.box-2-3rd {
+  width: 66.66666666666667%;
+}
+.box-5th {
   width: 20%;
 }
-.box-5.third {
-  width: 33.33%;
-}
-.box-10.two-third {
-  width: 66.66%;
+.box-6th {
+  width: 16.666666666666668%;
 }
 .box-1,
 .box-2,
@@ -130,7 +157,20 @@ Email: sstopnik@redventures.com
 .box-13,
 .box-14,
 .box-15,
-.box-16 {
+.box-16,
+.box-17,
+.box-18,
+.box-19,
+.box-20,
+.box-21,
+.box-22,
+.box-23,
+.box-24,
+.box-half,
+.box-3rd,
+.box-2-3rd,
+.box-5th,
+.box-6th {
   float: left;
   padding: 0 10px;
 }
@@ -173,10 +213,19 @@ Email: sstopnik@redventures.com
   .box-14,
   .box-15,
   .box-16,
-  .box-3.sixth,
-  .box-4.fifth,
-  .box-5.third,
-  .box-10.two-third {
+  .box-17,
+  .box-18,
+  .box-19,
+  .box-20,
+  .box-21,
+  .box-22,
+  .box-23,
+  .box-24,
+  .box-half,
+  .box-3rd,
+  .box-2-3rd,
+  .box-5th,
+  .box-6th {
     width: 100%;
     margin-bottom: 20px;
   }
@@ -189,6 +238,7 @@ Email: sstopnik@redventures.com
   .box-5,
   .box-6,
   .box-7,
+  .box-8,
   .box-9,
   .box-10,
   .box-11,
@@ -196,12 +246,21 @@ Email: sstopnik@redventures.com
   .box-13,
   .box-14,
   .box-15,
-  .box-16 {
+  .box-16,
+  .box-17,
+  .box-18,
+  .box-19,
+  .box-20,
+  .box-21,
+  .box-22,
+  .box-23,
+  .box-24,
+  .box-3rd,
+  .box-2-3rd {
     width: 100%;
   }
-  .box-8,
-  .box-3.sixth,
-  .box-4.fifth {
+  .box-5th,
+  .box-6th {
     width: 50%;
   }
 }
@@ -1511,19 +1570,37 @@ code span:hover {
 .ie7 .box-15,
 .ie6 .box-16,
 .ie7 .box-16,
-.ie6 .box-3.sixth,
-.ie7 .box-3.sixth,
-.ie6 .box-4.fifth,
-.ie7 .box-4.fifth,
-.ie6 .box-5.third,
-.ie7 .box-5.third,
-.ie6 .box-10.two-third,
-.ie7 .box-10.two-third {
+.ie6 .box-17,
+.ie7 .box-17,
+.ie6 .box-18,
+.ie7 .box-18,
+.ie6 .box-19,
+.ie7 .box-19,
+.ie6 .box-20,
+.ie7 .box-20,
+.ie6 .box-21,
+.ie7 .box-21,
+.ie6 .box-22,
+.ie7 .box-22,
+.ie6 .box-23,
+.ie7 .box-23,
+.ie6 .box-24,
+.ie7 .box-24,
+.ie6 .box-half,
+.ie7 .box-half,
+.ie6 .box-3rd,
+.ie7 .box-3rd,
+.ie6 .box-2-3rd,
+.ie7 .box-2-3rd,
+.ie6 .box-5th,
+.ie7 .box-5th,
+.ie6 .box-6th,
+.ie7 .box-6th {
   float: left;
   padding: 0 10px;
 }
-.i6 .container,
-.ie7 .container,
-.ie8 .container {
+.i6.container,
+.ie7.container,
+ie8.container {
   width: 960px;
 }
