--- a/less/ferret/box_grid.less
+++ b/less/ferret/box_grid.less
@@ -31,28 +31,39 @@
 
 
 // Box Widths
-.box-1 {width: 6.25%;}
-.box-2 {width:12.50%;}
-.box-3 {width: 18.75%;}
-.box-4 {width: 25%;}
-.box-5 {width: 31.25%;}
-.box-6 {width: 37.5%;}
-.box-7 {width: 43.75%;}
-.box-8 {width: 50%;}
-.box-9 {width: 56.25%;}
-.box-10 {width: 62.5%;}
-.box-11 {width: 68.75%;}
-.box-12 {width: 75%;}
-.box-13 {width: 81.25%;}
-.box-14 {width: 87.5%;}
-.box-15 {width: 93.75%;}
-.box-16 {width: 100%;}
-.box-3.sixth {width: 16.66%;}
-.box-4.fifth {width: 20%;}
-.box-5.third {width: 33.33%;}
-.box-10.two-third {width: 66.66%;}
+.box-1 {width: 100% / @grid-boxes;}
+.box-2 {width: 100% / @grid-boxes * 2;}
+.box-3 {width: 100% / @grid-boxes * 3;}
+.box-4 {width: 100% / @grid-boxes * 4;}
+.box-5 {width: 100% / @grid-boxes * 5;}
+.box-6 {width: 100% / @grid-boxes * 6;}
+.box-7 {width: 100% / @grid-boxes * 7;}
+.box-8 {width: 100% / @grid-boxes * 8;}
+.box-9 {width: 100% / @grid-boxes * 9;}
+.box-10 {width: 100% / @grid-boxes * 10;}
+.box-11 {width: 100% / @grid-boxes * 11;}
+.box-12 {width: 100% / @grid-boxes * 12;}
+.box-13 {width: 100% / @grid-boxes * 13;}
+.box-14 {width: 100% / @grid-boxes * 14;}
+.box-15 {width: 100% / @grid-boxes * 15;}
+.box-16 {width: 100% / @grid-boxes * 16;}
+.box-17 {width: 100% / @grid-boxes * 17;}
+.box-18 {width: 100% / @grid-boxes * 18;}
+.box-19 {width: 100% / @grid-boxes * 19;}
+.box-20 {width: 100% / @grid-boxes * 20;}
+.box-21 {width: 100% / @grid-boxes * 21;}
+.box-22 {width: 100% / @grid-boxes * 22;}
+.box-23 {width: 100% / @grid-boxes * 23;}
+.box-24 {width: 100% / @grid-boxes * 24;}
+.box-half {width: 50%;}
+.box-3rd {width: 100% / 3;}
+.box-2-3rd {width: 100% / 3 * 2;}
+.box-5th {width: 100% / 5;}
+.box-6th {width: 100% / 6;}
 .box-1, .box-2, .box-3, .box-4, .box-5, .box-6, .box-7, .box-8,
-.box-9, .box-10, .box-11, .box-12, .box-13, .box-14, .box-15, .box-16 {
+.box-9, .box-10, .box-11, .box-12, .box-13, .box-14, .box-15, .box-16,
+.box-17, .box-18, .box-19, .box-20, .box-21, .box-22, .box-23, .box-24,
+.box-half, .box-3rd, .box-2-3rd, .box-5th, .box-6th {
 	float: left;
 	padding: 0 10px;
 }
@@ -79,15 +90,18 @@
 	.row {margin-bottom: 0 !important;}
 	.box-1, .box-2, .box-3, .box-4, .box-5, .box-6, .box-7, .box-8,
 	.box-9, .box-10, .box-11, .box-12, .box-13, .box-14, .box-15, .box-16,
-	.box-3.sixth, .box-4.fifth, .box-5.third, .box-10.two-third {width: 100%; margin-bottom: 20px;}
+	.box-17, .box-18, .box-19, .box-20, .box-21, .box-22, .box-23, .box-24,
+	.box-half, .box-3rd, .box-2-3rd, .box-5th, .box-6th {width: 100%; margin-bottom: 20px;}
 }
 
 
 // Small Tablets
 @media (min-width: 600px) and (max-width: 767px) {
-	.box-1, .box-2, .box-3, .box-4, .box-5, .box-6, .box-7,
-	.box-9, .box-10, .box-11, .box-12, .box-13, .box-14, .box-15, .box-16 {width: 100%;}
-	.box-8, .box-3.sixth, .box-4.fifth {width: 50%;}
+	.box-1, .box-2, .box-3, .box-4, .box-5, .box-6, .box-7, .box-8,
+	.box-9, .box-10, .box-11, .box-12, .box-13, .box-14, .box-15, .box-16,
+	.box-17, .box-18, .box-19, .box-20, .box-21, .box-22, .box-23, .box-24,
+	.box-3rd, .box-2-3rd {width: 100%;}
+	.box-5th, .box-6th {width: 50%;}
 }
 
 
