--- a/less/ferret/box_grid_ie6_7.less
+++ b/less/ferret/box_grid_ie6_7.less
@@ -28,10 +28,13 @@
 	& .box-5.third{width:300px;}
 	& .box-10.two-third{width:620px;}
 	& .box-1, .box-2, .box-3, .box-4, .box-5, .box-6, .box-7, .box-8,
-	& .box-9, .box-10, .box-11, .box-12, .box-13, .box-14, .box-15, .box-16,
-	& .box-3.sixth, .box-4.fifth, .box-5.third, .box-10.two-third {
+	.box-9, .box-10, .box-11, .box-12, .box-13, .box-14, .box-15, .box-16,
+	.box-17, .box-18, .box-19, .box-20, .box-21, .box-22, .box-23, .box-24,
+	.box-half, .box-3rd, .box-2-3rd, .box-5th, .box-6th {
 		float: left;
 		padding: 0 10px;
 	}
 }
-.i6 .container, .ie7 .container, .ie8 .container {width: 960px;}
+.i6, .ie7, ie8 {
+	&.container {width: 960px;}	
+}
