--- a/less/ferret/box_grid.less
+++ b/less/ferret/box_grid.less
@@ -101,7 +101,7 @@
 	.box-9, .box-10, .box-11, .box-12, .box-13, .box-14, .box-15, .box-16,
 	.box-17, .box-18, .box-19, .box-20, .box-21, .box-22, .box-23, .box-24,
 	.box-3rd, .box-2-3rd {width: 100%;}
-	.box-5th, .box-6th {width: 50%;}
+	.box-half, .box-5th, .box-6th {width: 50%;}
 }
 
 
