--- a/less/ferret/style_buttons.less
+++ b/less/ferret/style_buttons.less
@@ -40,6 +40,7 @@
 	&.striped {background-image: @striped;}
 	&.flat {box-shadow: none; border: none; text-shadow: none;}
 	&.reverse {border-top: 1px solid @light-gray; background-color: @light-gray; color: @dark; text-shadow: -1px -1px 0 rgba(255,255,255,0.1);}
+	&.oval {.radius(@button-height / 2);}
 	
 	
 	// Sizes
