minor changes to LESS

--- a/less/ferret/style_lists.less
+++ b/less/ferret/style_lists.less
@@ -36,3 +36,15 @@ ol {
 		&:last-child {margin-bottom: 0;}
 	}
 }
+dl {
+	font-size: 90%;
+	dt {
+		color: @dark;
+		.font-bold;
+	}
+	dd {
+		letter-spacing: @base-letter-spacing;
+		margin-bottom: 10px;
+		&:last-child {margin-bottom: 0;}
+	}
+}
