--- a/css/style_complete.css
+++ b/css/style_complete.css
@@ -704,7 +704,7 @@ a.button {
   border-top: 1px solid #3faab9;
   background: #3faab9;
   border-radius: 3px;
-  box-shadow: inset 0 1px 3px rgba(255, 255, 255, 0.3);
+  box-shadow: inset 0 1px 2px rgba(255, 255, 255, 0.3);
   text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.1);
   -webkit-transition: all 0.15s ease-in-out;
   -moz-transition: all 0.15s ease-in-out;
@@ -1023,6 +1023,21 @@ ol li {
   letter-spacing: 1px;
 }
 ol li:last-child {
+  margin-bottom: 0;
+}
+dl {
+  font-size: 90%;
+}
+dl dt {
+  color: #353535;
+  font-family: 'OpenSansSemi';
+  font-weight: normal;
+}
+dl dd {
+  letter-spacing: 1px;
+  margin-bottom: 10px;
+}
+dl dd:last-child {
   margin-bottom: 0;
 }
 /* Tabs */
