--- a/less/ferret/style_forms.less
+++ b/less/ferret/style_forms.less
@@ -29,7 +29,7 @@ select.inputfield {
 	&:focus {background: @input-bg-focus url(../images/bg_select_arrow.png) no-repeat right;}
 }
 textarea.inputfield {height: 120px;}
-.checkbox {
+.checkbox, .radio-button {
 	float: left;
 	margin: 0 7px 20px 0;
 	&:focus {outline: none;}
