--- a/less/ferret/style_forms.less
+++ b/less/ferret/style_forms.less
@@ -31,11 +31,29 @@ select.inputfield {
 textarea.inputfield {height: 120px;}
 .checkbox, .radio-button {
 	float: left;
+	width: 15px;
+	height: 15px;
+	border: 1px solid @input-border;
+	background: #fff;
+	-webkit-appearance: none;
 	margin: 0 7px 20px 0;
-	&:focus {outline: none;}
+	cursor: pointer;
+}
+.checkbox {
+	.radius;
+	&:checked {background: url(../images/bg_checkbox.png) no-repeat center center;}
+}
+.radio-button {
+	.radius(50%);
+	&:checked {background: url(../images/bg_radio_button.png) no-repeat center center;}
 }
 
-label {float: left; font-size: 12px; line-height: 1.2;}
+
+label {
+	float: left;
+	font-size: 12px;
+	line-height: 1.3;
+}
 
 
 @media (max-width: 599px) {
